Updated to latest libs