@@ -1,4 +1,5 @@
 package com.oodesigns.ai.aws;
+
 import com.amazonaws.services.lambda.runtime.Context;
 import com.oodesigns.ai.assistant_configuration_creator.HandleResult;
 import com.oodesigns.ai.cloud.*;
@@ -7,119 +8,109 @@ import com.oodesigns.ai.general.Transformer;
 import com.oodesigns.ai.maker.ModelMakerResult;
 import com.oodesigns.ai.maker.ModelMakerStateError;
 import com.oodesigns.ai.maker.ModelMakerStateOK;
+import com.oodesigns.ai.support.LogCapture;
+
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.Arguments;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoSettings;
-import com.oodesigns.ai.support.LogCapture;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.InputStream;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @MockitoSettings
 class HandleModelCreationTest {
-    @Test
-    void errorExpectedModelInputBucketNameNullParameters
-            (@Mock final Context context,
-             @Mock final CloudStorable cloudStorable,
-             @Mock final CloudLoadable<InputStream> cloudLoadable,
-             @Mock final CloudCopyable cloudCopyable,
-             @Mock final Transformer<InputStream, ResultState<ModelMakerResult, ByteArrayOutputStream>> modelMaker){
 
-        final HandleModelCreation handleModelCreation = new HandleModelCreation(
-                modelMaker,
-                cloudStorable,
-                cloudLoadable,
-                cloudCopyable);
+    static {
+        // Ensure AWS SDK has a default region for client initialization
+        System.setProperty("aws.region", "us-east-1");
+    }
 
-        final CloudException cloudException = assertThrows(CloudException.class, () -> handleModelCreation.handleRequest(null, context));
-        assertThat(cloudException.getMessage()).contains("Bucket name for Model Input file is missing");
+    static Stream<Arguments> missingInputScenarios() {
+        return Stream.of(
+                Arguments.of(
+                        null,
+                        "Bucket name for Model Input file is missing"
+                ),
+                Arguments.of(
+                        Map.of("wrong-BucketName", "wrong-KeyName"),
+                        "Bucket name for Model Input file is missing"
+                ),
+                Arguments.of(
+                        Map.of("ModelInput-BucketName", ""),
+                        "Bucket name for Model Input file is missing"
+                ),
+                Arguments.of(
+                        Map.of("ModelInput-BucketName", "bucket1"),
+                        "Key name for Model Input file is missing"
+                ),
+                Arguments.of(
+                        Map.of(
+                                "ModelInput-BucketName", "bucket1",
+                                "ModelInput-KeyName", "key1"
+                        ),
+                        "Bucket name for Model file is missing"
+                ),
+                Arguments.of(
+                        Map.of(
+                                "ModelInput-BucketName", "bucket1",
+                                "ModelInput-KeyName", "key1",
+                                "Model-BucketName", "bucket2"
+                        ),
+                        "Key name for Model file is missing"
+                )
+        );
+    }
+
+    @ParameterizedTest(name = "Scenario {index}: expect {1}")
+    @MethodSource("missingInputScenarios")
+    void missingInputThrows(
+            final Map<String, String> input,
+            final String expectedMessage,
+            @Mock final Context context,
+            @Mock final CloudStorable cloudStorable,
+            @Mock final CloudLoadable<InputStream> cloudLoadable,
+            @Mock final CloudCopyable cloudCopyable,
+            @Mock final Transformer<InputStream, ResultState<ModelMakerResult, ByteArrayOutputStream>> modelMaker
+    ) {
+        final HandleModelCreation handler =
+                new HandleModelCreation(modelMaker,
+                        cloudStorable,
+                        cloudLoadable,
+                        cloudCopyable);
+
+        final CloudException ex = assertThrows(
+                CloudException.class,
+                () -> handler.handleRequest(input, context)
+        );
+        assertThat(ex.getMessage()).contains(expectedMessage);
     }
 
     @Test
-    void errorExpectedModelInputBucketNameMissing
-            (@Mock final Context context,
-             @Mock final CloudStorable cloudStorable,
-             @Mock final CloudLoadable<InputStream> cloudLoadable,
-             @Mock final CloudCopyable cloudCopyable,
-             @Mock final Transformer<InputStream, ResultState<ModelMakerResult, ByteArrayOutputStream>> modelMaker){
-
-        final Map<String, String> input = Map.of(
-                "wrong-BucketName", "wrong-KeyName");
-
-        final HandleModelCreation handleModelCreation = new HandleModelCreation(
-                modelMaker,
-                cloudStorable,
-                cloudLoadable,
-                cloudCopyable);
-
-        final CloudException cloudException = assertThrows(CloudException.class, () -> handleModelCreation.handleRequest(input, context));
-        assertThat(cloudException.getMessage()).contains("Bucket name for Model Input file is missing");
-    }
-
-    @Test
-    void errorExpectedModelInputBucketNameMissingData
-            (@Mock final Context context,
-             @Mock final CloudStorable cloudStorable,
-             @Mock final CloudLoadable<InputStream> cloudLoadable,
-             @Mock final CloudCopyable cloudCopyable,
-             @Mock final Transformer<InputStream, ResultState<ModelMakerResult, ByteArrayOutputStream>> modelMaker){
-
-        final Map<String, String> input = Map.of(
-                "ModelInput-BucketName", "");
-
-        final HandleModelCreation handleModelCreation = new HandleModelCreation(
-                modelMaker,
-                cloudStorable,
-                cloudLoadable,
-                cloudCopyable);
-
-        final CloudException cloudException = assertThrows(CloudException.class, () -> handleModelCreation.handleRequest(input, context));
-        assertThat(cloudException.getMessage()).contains("Bucket name for Model Input file is missing");
-    }
-
-    @Test
-    void errorExpectedModelInputKeyNameMissing
-            (@Mock final Context context,
-             @Mock final CloudStorable cloudStorable,
-             @Mock final CloudLoadable<InputStream> cloudLoadable,
-             @Mock final CloudCopyable cloudCopyable,
-             @Mock final Transformer<InputStream, ResultState<ModelMakerResult, ByteArrayOutputStream>> modelMaker){
-
-        final Map<String, String> input = Map.of(
-                "ModelInput-BucketName", "bucket1");
-
-        final HandleModelCreation handleModelCreation = new HandleModelCreation(
-                modelMaker,
-                cloudStorable,
-                cloudLoadable,
-                cloudCopyable);
-
-        final CloudException cloudException = assertThrows(CloudException.class, () -> handleModelCreation.handleRequest(input, context));
-        assertThat(cloudException.getMessage()).contains("Key name for Model Input file is missing");
-    }
-
-    @Test
-    void errorUnableToCreateModel
-            (@Mock final Context context,
-             @Mock final CloudStorable fileStore,
-             @Mock final CloudLoadable<InputStream> cloudLoadable,
-             @Mock final CloudCopyable cloudCopyable,
-             @Mock final Transformer<InputStream, ResultState<ModelMakerResult, ByteArrayOutputStream>> modelMaker){
-
-        final ResultState<ModelMakerResult, ByteArrayOutputStream> modelMakerState
-                = new ModelMakerStateError("Error Message");
-
-        when(modelMaker.transform(any())).thenReturn(modelMakerState);
-        when(cloudLoadable.retrieve(any() ,any())).thenReturn(Optional.of(new ByteArrayInputStream("test".getBytes())));
+    void errorUnableToCreateModel(
+            @Mock final Context context,
+            @Mock final CloudStorable fileStore,
+            @Mock final CloudLoadable<InputStream> cloudLoadable,
+            @Mock final CloudCopyable cloudCopyable,
+            @Mock final Transformer<InputStream, ResultState<ModelMakerResult, ByteArrayOutputStream>> modelMaker
+    ) {
+        final ResultState<ModelMakerResult, ByteArrayOutputStream> state =
+                new ModelMakerStateError("Error Message");
+        when(modelMaker.transform(any())).thenReturn(state);
+        when(cloudLoadable.retrieve(any(), any()))
+                .thenReturn(Optional.of(new ByteArrayInputStream("test".getBytes())));
 
         final Map<String, String> input = Map.of(
                 "ModelInput-BucketName", "bucket1",
@@ -127,121 +118,79 @@ class HandleModelCreationTest {
                 "Model-BucketName", "bucket2",
                 "Model-KeyName", "key2",
                 "Assistant-BucketName", "bucket3",
-                "Assistant-KeyName","key3");
-
-
-        final CloudStore cloudStorable = new CloudStore(fileStore);
-
-        final HandleModelCreation handleModelCreation = new HandleModelCreation(
+                "Assistant-KeyName", "key3"
+        );
+        final HandleModelCreation handler = new HandleModelCreation(
                 modelMaker,
-                cloudStorable,
+                new CloudStore(fileStore),
                 cloudLoadable,
-                cloudCopyable);
+                cloudCopyable
+        );
 
-        final CloudException cloudException = assertThrows(CloudException.class, () -> handleModelCreation.handleRequest(input, context));
-        assertThat(cloudException.getMessage()).contains("Error Message");
+        final CloudException ex = assertThrows(
+                CloudException.class,
+                () -> handler.handleRequest(input, context)
+        );
+        assertThat(ex.getMessage()).contains("Error Message");
     }
 
     @Test
-    void errorBucketNameForModelFileIsMissing
-            (@Mock final Context context,
-             @Mock final CloudStorable cloudStorable,
-             @Mock final CloudLoadable<InputStream> cloudLoadable,
-             @Mock final CloudCopyable cloudCopyable,
-             @Mock final Transformer<InputStream, ResultState<ModelMakerResult, ByteArrayOutputStream>> modelMaker){
+    void errorSavingFile(
+            @Mock final Context context,
+            @Mock final CloudStorable fileStore,
+            @Mock final CloudLoadable<InputStream> cloudLoadable,
+            @Mock final CloudCopyable cloudCopyable,
+            @Mock final Transformer<InputStream, ResultState<ModelMakerResult, ByteArrayOutputStream>> modelMaker,
+            @Mock final ByteArrayOutputStream outputStream,
+            @Mock final InputStream inputStream
+    ) {
+        final ResultState<ModelMakerResult, ByteArrayOutputStream> state =
+                new ModelMakerStateOK("Model Created", outputStream);
+        when(fileStore.store(any(), any()))
+                .thenReturn(new CloudStoreStateError("Test Error"));
+        when(modelMaker.transform(any())).thenReturn(state);
+        when(cloudLoadable.retrieve(any(), any()))
+                .thenReturn(Optional.ofNullable(inputStream));
 
-
-        final Map<String, String> input = Map.of(
-                "ModelInput-BucketName", "bucket1",
-                "ModelInput-KeyName", "key1");
-
-        final HandleModelCreation handleModelCreation = new HandleModelCreation(
-                modelMaker,
-                cloudStorable,
-                cloudLoadable,
-                cloudCopyable);
-
-        final CloudException cloudException = assertThrows(CloudException.class, () -> handleModelCreation.handleRequest(input, context));
-        assertThat(cloudException.getMessage()).contains("Bucket name for Model file is missing");
-    }
-
-    @Test
-    void errorKeyNameForModelIsMissing
-            (@Mock final Context context,
-             @Mock final CloudStorable cloudStorable,
-             @Mock final CloudLoadable<InputStream> cloudLoadable,
-             @Mock final CloudCopyable cloudCopyable,
-             @Mock final Transformer<InputStream, ResultState<ModelMakerResult, ByteArrayOutputStream>> modelMaker){
-
-        final Map<String, String> input = Map.of(
-                "ModelInput-BucketName", "bucket1",
-                "ModelInput-KeyName", "key1",
-                "Model-BucketName", "bucket2");
-
-        final HandleModelCreation handleModelCreation = new HandleModelCreation(
-                modelMaker,
-                cloudStorable,
-                cloudLoadable,
-                cloudCopyable);
-
-        final CloudException cloudException = assertThrows(CloudException.class, () -> handleModelCreation.handleRequest(input, context));
-        assertThat(cloudException.getMessage()).contains("Key name for Model file is missing");
-    }
-
-    @Test
-    void errorSavingFile
-            (@Mock final Context context,
-             @Mock final CloudStorable fileStore,
-             @Mock final CloudLoadable<InputStream> cloudLoadable,
-             @Mock final CloudCopyable cloudCopyable,
-             @Mock final Transformer<InputStream, ResultState<ModelMakerResult, ByteArrayOutputStream>> modelMaker,
-             @Mock final ByteArrayOutputStream outputStream,
-             @Mock final InputStream inputStream){
-
-        final ResultState<ModelMakerResult, ByteArrayOutputStream> modelMakerState
-                = new ModelMakerStateOK( "Model Created", outputStream);
-
-        when(fileStore.store(any(), any())).thenReturn(new CloudStoreStateError("Test Error"));
-        when(modelMaker.transform(any())).thenReturn(modelMakerState);
-        when(cloudLoadable.retrieve(any(),any())).thenReturn(Optional.ofNullable(inputStream));
-
-        final CloudStore cloudStore = new CloudStore(fileStore);
-
+        final CloudStore storable = new CloudStore(fileStore);
         final Map<String, String> input = Map.of(
                 "ModelInput-BucketName", "bucket1",
                 "ModelInput-KeyName", "key1",
                 "Model-BucketName", "bucket2",
                 "Model-KeyName", "key2",
                 "Assistant-BucketName", "bucket3",
-                "Assistant-KeyName","key3");
+                "Assistant-KeyName", "key3"
+        );
+        final HandleModelCreation handler =
+                new HandleModelCreation(modelMaker,
+                        storable,
+                        cloudLoadable,
+                        cloudCopyable);
 
-        final HandleModelCreation handleModelCreation = new HandleModelCreation(
-                modelMaker,
-                cloudStore,
-                cloudLoadable,
-                cloudCopyable);
-
-        final CloudException cloudException = assertThrows(CloudException.class, () -> handleModelCreation.handleRequest(input, context));
-        assertThat(cloudException.getMessage()).contains("Test Error");
+        final CloudException ex = assertThrows(
+                CloudException.class,
+                () -> handler.handleRequest(input, context)
+        );
+        assertThat(ex.getMessage()).contains("Test Error");
     }
 
     @Test
-    void SavingFileWithOutIssue
-            (@Mock final Context context,
-             @Mock final CloudStorable cloudStorable,
-             @Mock final CloudLoadable<InputStream> cloudLoadable,
-             @Mock final CloudCopyable cloudCopyable,
-             @Mock final Transformer<InputStream, ResultState<ModelMakerResult, ByteArrayOutputStream>> modelMaker,
-             @Mock final ByteArrayOutputStream outputStream,
-             @Mock final InputStream inputStream){
-
-
-        final ResultState<ModelMakerResult, ByteArrayOutputStream> modelMakerState
-                = new ModelMakerStateOK( "Model Created", outputStream);
-
-        when(cloudStorable.store(any(), any())).thenReturn(new CloudStoreStateOK());
-        when(modelMaker.transform(any())).thenReturn(modelMakerState);
-        when(cloudLoadable.retrieve(any(),any())).thenReturn(Optional.ofNullable(inputStream));
+    void SavingFileWithOutIssue(
+            @Mock final Context context,
+            @Mock final CloudStorable cloudStorable,
+            @Mock final CloudLoadable<InputStream> cloudLoadable,
+            @Mock final CloudCopyable cloudCopyable,
+            @Mock final Transformer<InputStream, ResultState<ModelMakerResult, ByteArrayOutputStream>> modelMaker,
+            @Mock final ByteArrayOutputStream outputStream,
+            @Mock final InputStream inputStream
+    ) {
+        final ResultState<ModelMakerResult, ByteArrayOutputStream> state =
+                new ModelMakerStateOK("Model Created", outputStream);
+        when(cloudStorable.store(any(), any()))
+                .thenReturn(new CloudStoreStateOK());
+        when(modelMaker.transform(any())).thenReturn(state);
+        when(cloudLoadable.retrieve(any(), any()))
+                .thenReturn(Optional.ofNullable(inputStream));
 
         final Map<String, String> input = Map.of(
                 "ModelInput-BucketName", "bucket1",
@@ -249,52 +198,52 @@ class HandleModelCreationTest {
                 "Model-BucketName", "bucket2",
                 "Model-KeyName", "key2",
                 "Assistant-BucketName", "bucket1",
-                "Assistant-KeyName","key3");
-
-        final HandleModelCreation handleModelCreation = new HandleModelCreation(
-                modelMaker,
-                cloudStorable,
-                cloudLoadable,
-                cloudCopyable);
-
-        try(final LogCapture logCapture = new LogCapture(HandleResult.class)) {
-
-            handleModelCreation.handleRequest(input, context);
-
-            assertThat(logCapture.getLogs().get(0).getMessage()).contains("Model Created");
+                "Assistant-KeyName", "key3"
+        );
+        final HandleModelCreation handler =
+                new HandleModelCreation(modelMaker,
+                        cloudStorable,
+                        cloudLoadable,
+                        cloudCopyable);
+        try (final LogCapture logCapture = new LogCapture(HandleResult.class)) {
+            handler.handleRequest(input, context);
+            assertThat(logCapture.getLogs().getFirst().getMessage())
+                    .contains("Model Created");
         }
 
-        final ArgumentCaptor<CloudObjectReference> crInput
-                = ArgumentCaptor.forClass(CloudObjectReference.class);
-
-        final ArgumentCaptor<CloudObjectReference> crOutput
-                = ArgumentCaptor.forClass(CloudObjectReference.class);
-
-        verify(cloudCopyable, times(1)).copy(crInput.capture(), crOutput.capture());
-
-        assertThat(crInput.getValue().getObjectName()).contains("key3");
-        assertThat(crOutput.getValue().getObjectName()).contains("key3");
-
-        assertThat(crOutput.getValue().getStoreName()).contains("bucket2");
-        assertThat(crInput.getValue().getStoreName()).contains("bucket1");
+        final ArgumentCaptor<CloudObjectReference> crInput =
+                ArgumentCaptor.forClass(CloudObjectReference.class);
+        final ArgumentCaptor<CloudObjectReference> crOutput =
+                ArgumentCaptor.forClass(CloudObjectReference.class);
+        verify(cloudCopyable, times(1))
+                .copy(crInput.capture(), crOutput.capture());
+        assertThat(crInput.getValue().getObjectName())
+                .contains("key3");
+        assertThat(crOutput.getValue().getObjectName())
+                .contains("key3");
+        assertThat(crOutput.getValue().getStoreName())
+                .contains("bucket2");
+        assertThat(crInput.getValue().getStoreName())
+                .contains("bucket1");
     }
 
     @Test
-    void handleModelCreationWithDefaultConNoValidFile(@Mock final Context context){
-
+    void handleModelCreationWithDefaultConNoValidFile(
+            @Mock final Context context
+    ) {
         final Map<String, String> input = Map.of(
                 "ModelInput-BucketName", "bucket1",
                 "ModelInput-KeyName", "key1",
                 "Model-BucketName", "bucket2",
                 "Model-KeyName", "key2",
                 "Assistant-BucketName", "bucket3",
-                "Assistant-KeyName","key3");
-
-        final HandleModelCreation handleModelCreation = new HandleModelCreation();
-
-        final CloudException exception = assertThrows(CloudException.class, () -> handleModelCreation.handleRequest(input, context));
-
-        assertThat(exception.getMessage()).contains("Unable to load model");
+                "Assistant-KeyName", "key3"
+        );
+        final HandleModelCreation handler = new HandleModelCreation();
+        final CloudException exception =
+                assertThrows(CloudException.class,
+                        () -> handler.handleRequest(input, context));
+        assertThat(exception.getMessage())
+                .contains("Unable to load model");
     }
-
 }
